--- a/test-reverse-engineer/test-reverse-engineer.csproj
+++ b/test-reverse-engineer/test-reverse-engineer.csproj
@@ -7,6 +7,17 @@
     <UserSecretsId>f3942032-e3a4-485f-a338-5b996b42d2d0</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Migrations\20190222081742_CreateCategory.cs" />
+    <Compile Remove="Migrations\20190222081742_CreateCategory.Designer.cs" />
+    <Compile Remove="Migrations\20190222081843_CreateCategory.cs" />
+    <Compile Remove="Migrations\20190222081843_CreateCategory.Designer.cs" />
+    <Compile Remove="Migrations\20190222082132_CreateCategory.cs" />
+    <Compile Remove="Migrations\20190222082132_CreateCategory.Designer.cs" />
+    <Compile Remove="Migrations\20190222082257_CreateCategory.cs" />
+    <Compile Remove="Migrations\20190222082257_CreateCategory.Designer.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
